# ReadyGo

./: .gitignore  .pre-commit-config.yaml  AUTHENTICATION_ARCHITECTURE.md  AZURE_CLIENT_SECRET_FIX.md  DOCKER_ENV_DEBUG.md  DOCKER_ENV_SETUP.md  ENTRA_ID_SSO_SETUP.md  FRONTEND_AUTH_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  README.md  pyproject.toml  readygo.cursorrules
backend/: .gitignore  Dockerfile  MIGRATION_INSTRUCTIONS.md  alembic.ini  app.cer  app.pfx  apply_accounts_migration.py  apply_migration.sh  apply_migration_fix.sh  check_estimate_line_items.py  fix_and_apply_migration.py  fix_monday_weekly_hours.py  fix_monday_weekly_hours.sql  fix_monday_weekly_hours_simple.py  fix_zero_hour_holiday_rows.py  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/legacy_archive_pre_cloud/: 0bfd96fd8268_fix_remaining_old_engagement_statuses.py  1d3c5cb3726a_add_delivery_center_approvers_table.py  20260412_financial_forecast_tables.py  3922f929429d_update_existing_engagement_statuses.py  3b1f4147b1aa_add_deal_forecast_fields_to_engagements.py  541d4c1511e4_cleanup_duplicate_engagements_table_and_.py  7dbe7fb867e1_create_foundation_tables.py  88e3e4f24793_rename_project_enums_to_engagement_enums.py  (+63 more)
backend/app/: __init__.py  main.py
backend/scripts/: backfill_holiday_timesheet_links.py  prune_engagement_lines_not_on_estimate.py  repair_locking_state.py  replicon_timesheet_import.py  sync_calendars_from_uploads.py
backend/tests/: test_account_list_enrichment.py  test_dashboard_opportunity_repository_compiles.py  test_financial_forecast_math.py  test_financial_forecast_repository_predicates.py  test_opportunity_cascade_billable.py  test_planning_week_hours.py  test_quote_list_financials.py  test_replicon_mapping_multi.py  test_replicon_normalize.py  test_sharepoint_graph.py  test_spreadsheet_draft_row_convention.py  test_timesheet_approval_list_labels.py  test_timesheet_approve_opportunity_dc.py  test_timesheet_load_sql_helpers.py
(+431 files in other folders)
